# ocr-dashboard-v2

./: .env.example  .gitignore  AGENTS.md  README.md  ocr-dashboard.service  pyproject.toml  requirements.txt  run.py  tab_jobconfig.html
.agent/skills/ocr-management/: SKILL.md
.agent/workflows/: deploy.md  github-mcp-guide.md  install-quota-watcher.md  ruff-linter.md  start-dev.md  test.md
.antigravity/: rules.md
.context/: api-reference.md  architecture.md  project-overview.md
app/: config.py  main.py
app/models/: __init__.py  requests.py
app/routes/: __init__.py  dashboard.py  profiles.py  settings.py
app/services/: __init__.py  process.py  profiles.py
app/utils/: __init__.py  db.py  security.py
config/: .gitignore  README.md  credentials.json.example
docs/: API.md  CONFIGURATION.md  MIGRATION.md
scripts/: auto_sync_runtime.sh  commit_reminder.sh  login_profile.py  push_retry.sh  start_web.sh
src/: app.py
src/ocr_engine.egg-info/: PKG-INFO  SOURCES.txt
src/ocr_engine/db/: client.py
src/ocr_engine/ocr/engine/: __init__.py  auto_login.py  base.py  browser_controller.py  db_locking.py  gemini_engine.py  image_processor.py  limit_monitor.py  main.py  models.py  playwright_engine.py  popup_extensions.py  prep_worker.py  pro_limit_handler.py  (+3 more)
src/ocr_engine/pipeline/: run.py  status.py
src/ocr_engine/utils/: activity_logger.py  path_security.py
src/ocr_engine/worker/: run.py
static/: dashboard.css  dashboard_v2.css
templates/: dashboard.html  dashboard2.html  dashboard_v2.html  dashboard_v2.html.broken  dashboard_v2.html.pre_dedup
(+1 files in other folders)
